container grid alignment issues are improved

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -179,14 +179,14 @@ $body-font-family: 'Inter';
           --container-xs-max-width: 800px;
           --container-sm-max-width: 1000px;
           --container-md-max-width: 1200px;
-      }
+        }
       }
         /* md */
       @media (min-width: 960px) and (max-width: 1280px) {
 
         :root {
-          --container-xs-max-width: 800px;
-          --container-sm-max-width: 1000px;
+          --container-xs-max-width: 600px;
+          --container-sm-max-width: 800px;
           --container-md-max-width: 1200px;
         }
       
@@ -195,8 +195,8 @@ $body-font-family: 'Inter';
       /* sm */
       @media (min-width: 600px) and (max-width: 960px) {
         :root {
-          --container-xs-max-width: 82%;
-          --container-sm-max-width: 800px;
+          --container-xs-max-width: 92%;
+          --container-sm-max-width: 92%;
           --container-md-max-width: 92%;
         }
       }
